@@ -18,7 +18,7 @@ import java.io.InputStreamReader;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Component
+//@Component
 @RequiredArgsConstructor
 public class DataInitializer {
 
@@ -31,18 +31,13 @@ public class DataInitializer {
     public void init() {
         String password = bCryptPasswordEncoder.encode("12345678");
         Member member = Member.createMember("홍길동", "kino@spring.com", password, "키노");
-        for (int i = 0; i < 100; i++) {
-            Member member1 = Member.createMember(i+"", i+"@spring.com", password, i+"");
-            memberService.join(member1);
-        }
         memberService.join(member);
 
         int n = loadPostsFromFile("posts.txt", member.getId());
-//        loadCommentsFromFile("comments.txt",n, member.getId());
-        loadComments("comments.txt");
+        loadCommentsFromFile("comments.txt",n, member.getId());
+//        loadCommentsForTest(1L,"comments.txt");
     }
 
-    @Transactional
     public int loadPostsFromFile(String filePath, Long memberId) {
         int line = 0;
         try {
@@ -50,7 +45,7 @@ public class DataInitializer {
             List<String> lines;
 
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(resource.getInputStream()))) {
-                lines = reader.lines().collect(Collectors.toList());
+                lines = reader.lines().toList();
             }
 
             line = lines.size() / 2;
@@ -62,20 +57,18 @@ public class DataInitializer {
                 }
             }
         } catch (IOException e) {
-            e.printStackTrace();
             System.out.println("파일을 읽을 수 없습니다: " + filePath);
         }
         return line;
     }
 
-    @Transactional
     public void loadCommentsFromFile(String filePath, int postCount, Long memberId) {
         try {
             Resource resource = new ClassPathResource(filePath);
             List<String> lines;
 
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(resource.getInputStream()))) {
-                lines = reader.lines().collect(Collectors.toList());
+                lines = reader.lines().toList();
             }
 
             for (int i = 0; i < postCount; i++) {
@@ -85,28 +78,30 @@ public class DataInitializer {
                 }
             }
         } catch (IOException e) {
-            e.printStackTrace();
             System.out.println("파일을 읽을 수 없습니다: " + filePath);
         }
     }
 
-    @Transactional
-    public void loadComments(String filePath) {
+    public void loadCommentsForTest(Long postId,String filePath) {
+        String password = bCryptPasswordEncoder.encode("12345678");
+        for (int i = 0; i < 100; i++) {
+            Member member1 = Member.createMember(i+"", i+"@spring.com", password, i+"");
+            memberService.join(member1);
+        }
         try {
             Resource resource = new ClassPathResource(filePath);
             List<String> lines;
 
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(resource.getInputStream()))) {
-                lines = reader.lines().collect(Collectors.toList());
+                lines = reader.lines().toList();
             }
 
             for (int j = 1; j < lines.size(); j++) {
                 String comment = lines.get(j);
-                commentService.write(1L, (long)j, comment);
+                commentService.write(postId, (long)j, comment);
             }
 
         } catch (IOException e) {
-            e.printStackTrace();
             System.out.println("파일을 읽을 수 없습니다: " + filePath);
         }
     }
